manifests/handyman-ordering-service.yml
apiVersion: v1
kind: Service
metadata:
  name: handyman-ordering
  labels:
    app: handyman-ordering
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: handyman-ordering
